--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feezco/client",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
