--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "semantic-release": "^19.0.2",
     "typescript": "^4.6.3"
   },
+  "bin": "dist/bin.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
