--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/node": "^17.0.23",
     "semantic-release": "^19.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "bin": "dist/bin.js",
@@ -48,5 +50,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "quicktype-core": "^6.0.71"
   }
 }
