--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
     "outDir": "dist",
     "declaration": true,
+    "resolveJsonModule": true,
+    "types": ["node"]
   }
 }
