--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.13.2'
-          scope: '@feezco'
+          registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm ci
       - name: Run test
@@ -31,5 +31,5 @@ jobs:
         run: npx semantic-release
       - name: Release package
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npm run build && npm publish
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm run build && npm publish --access public
