--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.13.2'
-          registry-url: https://registry.npmjs.org/,
+          registry-url: https://registry.npmjs.org/
           scope: '@feezco'
       - name: Install dependencies
         run: npm ci
