--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/cli-color": "^2.0.2",
+    "@types/inquirer": "^8.2.1",
     "@types/node": "^17.0.23",
     "semantic-release": "^19.0.2",
     "ts-node": "^10.7.0",
@@ -49,8 +51,13 @@
     ]
   },
   "dependencies": {
+    "@types/chalk": "^2.2.0",
     "axios": "^0.26.1",
+    "chalk": "^5.0.1",
+    "cli-color": "^2.0.2",
     "dotenv": "^16.0.0",
-    "quicktype-core": "^6.0.71"
+    "inquirer": "^8.2.4",
+    "quicktype-core": "^6.0.71",
+    "uninstall": "^0.0.0"
   }
 }
